    - added gobuntu-desktop to the list of supported
      meta-packages
  * data/update-manager.desktop.in:
    - remove deprecated entries (thanks to Kmos)
  * UpdateManager/Core/MetaRelease.py:
    - add support to prompt only for specifc release upgrades 
      (e.g. lts->lts)
  * data/release-upgrades:
    - set the default prompting for hardy to "Prompt only for
      a new lts version"

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Dec 2007 15:56:22 +0100

update-manager (1:0.85.4) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - do not use python2.5 try:/expect:/finally: - we need to run
      on 2.4 as well for dapper->hardy (LP: #164947)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Nov 2007 10:47:57 +0100

update-manager (1:0.85.3) hardy; urgency=low

  * DistUpgrade/DistUpgrade.cfg, 
    DistUpgrade/DistUpgrade.glade,
    DistUpgrade/ReleaseAnnouncement,
    DistUpgrade/window_main.ui:
    - updated for hardy
  * DistUpgrade/DistUpgradeControler.py,:
    DistUpgrade/DistUpgradeCache.py:
    - better description whats happening when calculating the 
      release-upgrade
    - keep the GUI responsive while calculating the upgrade

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 23 Nov 2007 18:24:12 +0100

update-manager (1:0.85.2) hardy; urgency=low

  * debian/control:
    - added missing "XS-Vcs-Bzr" header (thanks to Brian 
  * debian/rules:
    - dh_iconcache is obsolete, use dh_icons instead

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Nov 2007 12:34:18 -0500

update-manager (1:0.85.1) hardy; urgency=low

  * fix FTBFS

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 06 Nov 2007 08:24:57 -0500

update-manager (1:0.85) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix crash when packages get downgraded (LP: #154257)
  * DistUpgrade/DistUpgradeController.py:
    - fix typo in classname (thanks to Matt T. Proud)
  * DistUpgrade/DistUpgrade.cfg:
    - update for hardy
