@@ -55,8 +55,10 @@
       <default>True</default>
 		
       <locale name="C">
-        <short>Check for new distribution releases</short>
+        <short>*deprecated* Check for new distribution releases</short>
         <long>
+	   This key is deprecated in favor of the file /etc/update-manager/release-upgrades
+
 	   Check automatically if a new version of the current 
            distribution is available and offer to upgrade (if
            possible).
