@@ -1,12 +1,23 @@
-# demoted packages
+# demoted packages from gutsy to hardy
+libgdchart-gd2-noxpm
+libgdchart-gd2-noxpm-dev
 libnasl-dev
 libnasl2
+libnessus-dev
+libnessus2
 libnet1
 libnet1-dev
-libopencdk8
-libopencdk8-dbg
-libopencdk8-dev
 libvncserver-dev
 nessus
 nessus-dev
 nessus-plugins
+nessusd
+tex4ht
+tex4ht-common
+ubuntu-calendar
+ubuntu-calendar-december
+ubuntu-calendar-february
+ubuntu-calendar-january
+ubuntu-calendar-march
+ubuntu-calendar-november
+ubuntu-calendar-october
