@@ -1,0 +1,243 @@
+# demoted packages from dapper to hardy
+alcovebook-sgml
+alcovebook-sgml-doc
+aspell-fi
+binfmt-support
+blender
+bluez-hcidump
+bluez-pcmcia-support
+calc
+console-common
+console-data
+courier-authdaemon
+courier-base
+courier-doc
+courier-imap
+courier-imap-ssl
+courier-pop
+courier-pop-ssl
+courier-ssl
+debian-el
+debmake
+dh-consoledata
+dh-kpatches
+doc-debian
+dpkg-dev-el
+emacs21
+emacs21-bin-common
+emacs21-common
+emacs21-el
+evms
+evms-cli
+evms-gui
+evms-ncurses
+expat
+festlex-cmu
+festlex-poslex
+festvox-kallpc16k
+ftgl-dev
+g++-3.4
+gcj-4.1-base
+gij-4.1
+git-email
+gnome-cups-manager
+gnome-doc-tools
+gnus
+gok
+gok-doc
+gtkhtml3.8
+gtranslator
+heartbeat
+heartbeat-dev
+heimdal-dev
+ia32-libs-kde
+installation-guide-hppa
+irssi-text
+kde-style-lipstik
+kitchensync
+klaptopdaemon
+kmplayer-doc
+knewsticker-scripts
+ladspa-sdk
+lam4-dev
+lam4c2
+latex-xft-fonts
+libaltlinuxhyph-dev
+libasn1-6-heimdal
+libcompfaceg1
+libcompfaceg1-dev
+libconfig-inifiles-perl
+libconvert-binhex-perl
+libdm0
+libdm0-dev
+libdvdnav-dev
+libdvdnav4
+libdvdread3
+libemail-valid-perl
+libevms-2.5
+libevms-dev
+libfinance-quote-perl
+libgcj7-jar
+libgd-gd2-noxpm-perl
+libgda2-3
+libgda2-common
+libgda2-dev
+libgda2-doc
+libgdchart-gd2-noxpm
+libgdchart-gd2-noxpm-dev
+libglib1.2
+libglib1.2-dbg
+libglib1.2-dev
+libgnomecupsui1.0-1c2a
+libgnomecupsui1.0-dev
+libgnomedb2-4
+libgnomedb2-common
+libgnomedb2-dev
+libgnomedb2-doc
+libgnucrypto-java
+libgssapi4-heimdal
+libgtk1.2
+libgtk1.2-common
+libgtk1.2-dbg
+libgtk1.2-dev
+libhdb7-heimdal
+libhtml-tableextract-perl
+libio-pty-perl
+libipc-run-perl
+libjaxp1.2-java
+libkadm5clnt4-heimdal
+libkadm5srv7-heimdal
+libkafs0-heimdal
+libkrb5-17-heimdal
+liblzo1
+libmail-sendmail-perl
+libmailtools-perl
+libmime-perl
+libmpich1.0-dev
+libnasl-dev
+libnasl2
+libnessus-dev
+libnessus2
+libnet-dns-perl
+libnet-domain-tld-perl
+libnet-ip-perl
+libnet1
+libnet1-dev
+libnetcdf++3
+libnetcdf3
+libnews-nntpclient-perl
+libpcap0.7
+libpcap0.7-dev
+libpgtcl-dev
+libpgtcl1.5
+libpils-dev
+libpils0
+libpq4
+libquicktime-dev
+libroken16-heimdal
+libstdc++6-dbg
+libstdc++6-dev
+libstlport4.6-dev
+libstlport4.6c2
+libstonith-dev
+libstonith0
+libsyck0-dev
+libttf-dev
+libttf2
+libvncauth-dev
+libvncauth0
+libxaw6
+libxaw6-dbg
+libxml-dev
+libxml1
+libxmlsec1
+libxmlsec1-dev
+libxmlsec1-nss
+libxmlsec1-openssl
+memtester
+menu-xdg
+mgetty
+mgetty-fax
+mpi-doc
+mpich-bin
+myspell-fi
+nagios-common
+nagios-mysql
+nagios-pgsql
+nagios-plugins
+nagios-plugins-basic
+nagios-plugins-standard
+nagios-text
+nessus
+nessus-dev
+nessus-plugins
+nessusd
+netcdfg-dev
+nvidia-glx-legacy
+nvidia-glx-legacy-dev
+openjade1.3
+openoffice.org-help-km
+openoffice.org-l10n-km
+pcmcia-cs
+perlsgml
+pmount
+postgresql-8.1
+postgresql-client-8.1
+postgresql-contrib-8.1
+postgresql-doc-8.1
+postgresql-plperl-8.1
+postgresql-plpython-8.1
+postgresql-pltcl-8.1
+postgresql-server-dev-8.1
+procinfo
+publib-dev
+python-elementtree
+python-elementtree-doc
+python-eunuchs
+python-gadfly
+python-htmltmpl
+python-kjbuckets
+python-mode
+python-netcdf
+python-pgsql
+python-psycopg
+python-scientific-doc
+python-soappy
+python-sqlite
+python-stats
+python-syck
+python2.4-schooltool
+rcs
+readahead-list
+reportbug
+rhino
+rhino-doc
+schooltool
+sdf-doc
+sgml2x
+smake
+springgraph
+sysutils
+tcsh
+tex4ht
+ttf-baekmuk
+ttf-bpg-georgian-fonts
+ubuntu-calendar
+ubuntu-calendar-december
+ubuntu-calendar-february
+ubuntu-calendar-january
+ubuntu-calendar-march
+ubuntu-calendar-november
+ubuntu-calendar-october
+utf8-migration-tool
+vnc-common
+wfinnish
+wlassistant
+xarchiver
+xfce4-taskmanager
+xfmedia
+xmms
+xmms-dev
+xvncviewer
+yada
+yada-doc
